# hicn-sdk

./: .cz.toml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md
.github/: CODEOWNERS  settings.yml
.github/workflows/: android-dep.yml  android-env.yml  android-hicn.yml  master.yml  test_action.yml  verify.yml
android/: .gitignore  Dockerfile  Makefile  README.md  compileAll.sh  compileDep.sh  compileDepQt.sh  compileHicn.sh  compileQtDep.sh
android/CommonLibrary/: README.md  build.gradle  gradle.properties
android/CommonLibrary/common/: build.gradle
android/HicnForwarderAndroid/: build.gradle  settings.gradle
android/HicnForwarderAndroid/aar/: common  facemgrLibrary  hicnforwarderLibrary
android/HicnForwarderAndroid/app/: build.gradle
android/HicnForwarderAndroid/app/src/main/jni/: CMakeLists.txt  hi_perf.cpp  hi_perf.h  hiperf-wrapper.cpp  httpproxy-wrapper.cpp
android/HicnForwarderAndroid/app/src/main/jni/cmake/Modules/: FindHicnFwd.cmake  FindHicnlight.cmake  FindLibconfig++.cmake  FindLibhicn.cmake
android/HicnForwarderAndroid/hproxyLibrary/: build.gradle  gradle-wrapper.properties  strings.xml
android/aar/: properties.gradle
android/aar/FaceMgrLibrary/: build.gradle  settings.gradle
android/aar/ForwarderLibrary/: settings.gradle
android/aar_modules/CommonLibrary/: .gitignore  build.gradle
android/aar_modules/FaceMgrLibrary/: build.gradle  settings.gradle
android/aar_modules/ForwarderLibrary/: build.gradle  settings.gradle
android/builder/: Dockerfile_dep  Dockerfile_env  Dockerfile_hicn  README.md
android/builder/scripts_dep/: compile_dep.sh
android/builder/scripts_hicn/: compile_hicn.sh
android/ci/: Dockerfile  Dockerfile_dep  Dockerfile_env  Dockerfile_hicn  Dockerfile_verify  build_aar.sh  build_apk.sh  docker-build.sh  docker-publish.sh  push_playstore.sh
android/config/: config.mk  versions.mk
android/config/modules/: 000-dependencies.mk  001-modules.mk  002-cmake-modules.mk  105-libconfig.mk  109-curl.mk  110-librdkafka.mk  130-hicn.mk  140-hproxy.mk
android/hICNTools/: build.gradle
android/hICNTools/app/: build.gradle  hicnforwarder.keystore
android/hICNTools/app/src/main/cpp/: CMakeLists.txt  hi_perf.cpp  hi_perf.h  hi_ping.cpp  hi_ping.h  hicn.cpp
android/hICNTools/app/src/main/cpp/cmake/Modules/: FindCCNX_Portal.cmake  FindCCNX_Transport_Rta.cmake  FindHicn.cmake  FindHicnFwd.cmake  FindLibhicnet.cmake  FindZfLog.cmake
android/hicn-aar/: .dockerignore  CHANGELOG.md
android/hicn-aar/FaceMgrLibrary/: .gitignore  build.gradle  settings.gradle
android/hicn-aar/ForwarderLibrary/: build.gradle  settings.gradle
android/scripts/: build-openssl.sh  compile_androidviper.sh  compile_common_aar.sh  compile_facemgr_aar.sh  compile_ffmpeg.sh  compile_hicnforwarder.sh  compile_hicnforwarder_aar.sh  compile_hicntools.sh  compile_hproxy_aar.sh  compile_openssl.sh  download_core_android_aar.sh  download_dep.sh  download_hicn.sh  download_qtdep.sh  init.sh  init_qt.sh  init_sdk.sh  install_asio.sh  install_modern_cpp_kafka.sh  install_qtav.sh  print_env_version.sh  publish_common_aar.sh  publish_facemgr_aar.sh  publish_hicnforwarder_aar.sh  toolchains_path.py  update.sh
docker/: Dockerfile.vswitch
docker/tests/: Dockerfile.host  Dockerfile.router  README.md  daemons  docker-compose.yml  frr-router1.conf  frr-router2.conf  host-start.sh  startup.conf  supervisord.conf  vpp-init-host1.txt  vpp-init-host2.txt  vpp-init-router1.txt  vpp-init-router2.txt  vtysh.conf
ios/: Makefile  README.md
ios/hICNTools/: Podfile  exportOptions.plist
ios/hICNTools/hICNTools/: AppDelegate.swift  BalloonMarker.swift  BaseViewController.swift  Constants.swift  Defaults.swift  Env.swift  ForwarderViewController.swift  ForwarderViewController.xib  HIperfViewController.swift  HIperfViewController.xib  RepeatingTimer.swift  SceneDelegate.swift  hICNTools-Bridging-Header.h  hi_perf.cpp  hi_perf.hpp  hicnFwd.c  hicnFwd.h  hiperf.cpp  hiperf.hpp
ios/hICNTools/hICNTools.xcodeproj/: project.pbxproj
ios/hICNTools/hICNTools.xcworkspace/: contents.xcworkspacedata
macos/: Makefile  README.md
macos/Hybrid ICN Network Service/: Podfile
macos/Hybrid ICN Network Service/Hybrid ICN Network Service.xcodeproj/: project.pbxproj
macos/scripts/: script.sh
windows/: Makefile  README.md
windows/scripts/: init.bat
(+221 files in other folders)
